dataset1235/2025-2/1153765216/users/1937138466/executions/2372395858_3449543993.log
== SUBMISSION (2025-08-28 18:28:31)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:27:14)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2 * tan) * (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:26:08)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2 * tan) * (pi * 10)
area = 5 * lado * apotema
prin(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2 * tan) * (pi * 10)
                      ~~^~~~~
TypeError: unsupported operand type(s) for *: 'int' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:28:03)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:35:47)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10)
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:28:32)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:00)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = float(lado / 2 *tan* (pi * 10))
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:37:22)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:37:14)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:52:54)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
---- user output:
Informe um lado: 123.11
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
---- user output:
Informe um lado: 30.78
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
---- user output:
Informe um lado: 276.99
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
---- user output:
Informe um lado: 377.02
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
---- user output:
Informe um lado: 69.25
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
---- user output:
Informe um lado: 192.36
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:37:21)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:37:14)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:36:01)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:34:11)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:34:10)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:37:15)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:13)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:36:18)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:28:04)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:28:59)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = float(lado / 2 *tan* (pi * 10))
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = float(lado / 2 *tan* (pi * 10))
                    ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:36:00)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:12)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:29:13)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / 2 *tan* (pi * 10)
area = 5 * lado * apotema
print(area, 2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / 2 *tan* (pi * 10)
              ~~~~~~~~~^~~~
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:35:46)
-- CODE: 
from math import *
lado = float(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10)
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
File "XXXX", line 3
    apotema = lado / (2*tan**(pi/10)
                     ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:36:17)
-- CODE: 
from math import *
lado = int(input("Informe um lado: "))
apotema = lado / (2*tan**(pi/10))
area = 5 * lado * apotema
print(round(area, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4
---- correct output:
123.11
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 2:
---- input:
2
---- correct output:
30.78
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 3:
---- input:
6
---- correct output:
276.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 4:
---- input:
7
---- correct output:
377.02
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 5:
---- input:
3
---- correct output:
69.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- TEST CASE 6:
---- input:
5
---- correct output:
192.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    apotema = lado / (2*tan**(pi/10))
                        ~~~^^~~~~~~~
TypeError: unsupported operand type(s) for ** or pow(): 'builtin_function_or_method' and 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
